[package]
name = "concierge"
version = "0.2.1"
edition = "2021"

[dependencies]
assert_cmd = "2.0.16"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
eyre = "0.6.12"
git-url-parse = "0.4.4"
git2 = "0.18.3"
hostname = "0.4.0"
log = "0.4.21"
os-version = "0.2.0"
predicates = "3.1.2"
pretty_env_logger = "0.5.0"
shellexpand = "3.1.0"
tempfile = "3.10.1"
url = "2.5.0"

[dev-dependencies]
lipsum = "0.9.1"
tempfile = "3.10.1"
